refactor: extracted lint pattern filtering